updating repository URL in jekyll config file

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@ title: TempEdit user documentation
 email: gustavo@hipertipo.com
 description: TempEdit user documentation
 baseurl: ""
-url: https://gferreira.github.io/tempEdit/
+url: https://hipertipo.github.io/tempEdit/
 
 markdown: kramdown
 
